--- a/index.html
+++ b/index.html
@@ -106,11 +106,17 @@
         
         <h2 id="installation" class="section"><a class="anchor-link left" href="#installation"><i class="icofont-laika link">&#xef71;</i></a>Installation</h2>
         <p>Add the following to your <code>build.sbt</code>:</p>
-        <pre class="keep-together pdf epub"><code class="nohighlight"><span class="identifier">libraryDependencies</span><span> += </span><span class="string-literal">&quot;io.github.arturaz&quot;</span><span> % </span><span class="string-literal">&quot;doobie-typesafe&quot;</span><span> % </span><span class="string-literal">&quot;0.1-0d257ea-SNAPSHOT&quot;</span></code></pre>
+        <pre class="keep-together pdf epub"><code class="nohighlight"><span class="identifier">libraryDependencies</span><span> += </span><span class="string-literal">&quot;io.github.arturaz&quot;</span><span> % </span><span class="string-literal">&quot;doobie-typesafe&quot;</span><span> % </span><span class="string-literal">&quot;0.1.0&quot;</span></code></pre>
+        <p>The code from <code>main</code> branch can be obtained with:</p>
+        <pre class="keep-together pdf epub"><code class="nohighlight"><span class="identifier">resolvers</span><span> ++= </span><span class="type-name">Resolver</span><span>.</span><span class="identifier">sonatypeOssRepos</span><span>(</span><span class="string-literal">&quot;snapshots&quot;</span><span>)
+</span><span class="identifier">libraryDependencies</span><span> += </span><span class="string-literal">&quot;io.github.arturaz&quot;</span><span> % </span><span class="string-literal">&quot;doobie-typesafe&quot;</span><span> % </span><span class="string-literal">&quot;0.1.0-1-781e408-SNAPSHOT&quot;</span></code></pre>
         <p><strong>The library is only published for Scala 3</strong> due to the use of 
         <a href="https://docs.scala-lang.org/scala3/reference/new-types/match-types.html">Scala 3 match types</a>.</p>
         <p>You can see all the published artifacts on 
-        <a href="https://mvnrepository.com/artifact/io.github.arturaz/doobie-typesafe_3">Maven</a>.</p>
+        <a href="https://mvnrepository.com/artifact/io.github.arturaz/doobie-typesafe_3">MVN Repository</a>, 
+        <a href="https://search.maven.org/artifact/io.github.arturaz/doobie-typesafe_3">Maven Central</a>,
+        <a href="https://oss.sonatype.org/#nexus-search;quick~doobie-typesafe">Sonatype</a> or
+        <a href="https://repo1.maven.org/maven2/io/github/arturaz/doobie-typesafe_3/">raw Maven repository</a>.</p>
         
         <h2 id="credits" class="section"><a class="anchor-link left" href="#credits"><i class="icofont-laika link">&#xef71;</i></a>Credits</h2>
         <p>This library was created by <a href="https://arturaz.net">Artūras Šlajus</a>. You can find me as <code>arturaz</code> on the 
